<resources>

    <string name="app_name">youji</string>
    <string name="setting_time_title">开始旅行记录</string>
    <string name="start_date">开始日期</string>
    <string name="end_date">结束日期</string>
    <string name="start_button">开始记录</string>
    <string name="give_up_button">放弃记录</string>
    <string name="time_for_year">%1$s年</string>
    <string name="time_for_month_and_day">%1$s-%2$s</string>

</resources>
